--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "basket/yii2-basket",
+    "name": "readly24/yii2-basket",
     "description": "Basket of yii2 shop",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","basket","cart","internet magazin","shopcart"],
